--- a/source/src/styles/base.styl
+++ b/source/src/styles/base.styl
@@ -8,11 +8,13 @@ html
   -webkit-font-smoothing: antialiased;
   background-color bg-light-color;
   font-weight 400;
+  line-height 1.5;
 html,
 body
   height 100%;
   color font-color;
-
+  // background: url(https://photo.tuchong.com/3441423/f/499450154.jpg) no-repeat;
+  background-size: cover;
 a
   text-decoration none;
   color font-color;
@@ -20,5 +22,12 @@ img
   max-width 100%;
   max-height 100%;
 
+#app
+  height 100%;
+.fe-placeholder
+  font-size 48px;
+  text-align center;
+  padding 160px;
+  letter-spacing 16px;
+  color #aaa;
 
-  
