--- a/source/src/styles/components/header.styl
+++ b/source/src/styles/components/header.styl
@@ -16,6 +16,9 @@
   font-size 24px;
   background-color dark-color;
   color white-color;
-  font-weight 700;
+  font-weight 300;
+  letter-spacing 2px;
   &-fe
     color primary-color;
+  &-1024
+    color white-color;
