--- a/source/src/styles/pages/home.styl
+++ b/source/src/styles/pages/home.styl
@@ -11,7 +11,9 @@
       padding 8px 0;
     &-body
       padding 8px 0;
-      line-height 2;
+      // line-height 2;
+      p
+        margin-bottom 16px;
     &-left
       width 60%
       float left;
@@ -33,6 +35,7 @@
       width 35%
       float right;
       &-lipper
+        overflow hidden;
         text-align center;
         // background-color #333;
         min-height 400px;
